--- a/templates/index2.html
+++ b/templates/index2.html
@@ -1,37 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Card</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/main.css">
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body> 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
-      <li><a href="/addmatch">AddMatch</a></li>
-      <li><a href="/addsquad">AddSquad</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
+{% extends "base.html" %}
+
+{% block title %}Dream11 Manager{% endblock %}
+
+{% block content %}
 <div class="container">
-  <h2>Basic Card</h2>
-  <div class="card">
-    <div class="card-body">Basic card</div>
+  <div class="glass-panel">
+    <h2 class="text-center mb-4">Dream11 Manager</h2>
+    <div class="text-center">
+      <p class="lead">Welcome to the Dream11 Team Management System</p>
+      <div class="row mt-4">
+        <div class="col-md-4">
+          <div class="match-card text-center">
+            <i class="fas fa-home fa-3x mb-3 text-primary"></i>
+            <h5>Home</h5>
+            <p class="text-muted">View all matches</p>
+            <a href="/" class="btn btn-primary">Go to Home</a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="match-card text-center">
+            <i class="fas fa-plus-circle fa-3x mb-3 text-success"></i>
+            <h5>Add Match</h5>
+            <p class="text-muted">Create new matches</p>
+            <a href="/addmatch" class="btn btn-success">Add Match</a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="match-card text-center">
+            <i class="fas fa-users fa-3x mb-3 text-info"></i>
+            <h5>Add Squad</h5>
+            <p class="text-muted">Manage player squads</p>
+            <a href="/addsquad" class="btn btn-info">Add Squad</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
-</body>
-</html>
+{% endblock %}
