--- a/templates/addplayers.html
+++ b/templates/addplayers.html
@@ -158,13 +158,11 @@
               <i class="fas fa-users-cog"></i> Update Roles
             </a>
           </div>
+
           <div class="col-md-3">
-            <form action="/customTeams" method="post" class="d-inline w-100">
-              <input type="hidden" name="matchid" value="{{matchid}}">
-              <button type="submit" class="btn btn-info btn-sm w-100">
-                <i class="fas fa-star"></i> Custom Teams
-              </button>
-            </form>
+            <a href="/player_alternatives_map/{{matchid}}" class="btn btn-warning btn-sm w-100">
+              <i class="fas fa-exchange-alt"></i> Alternatives Map
+            </a>
           </div>
           <div class="col-md-3">
             <button type="button" class="btn btn-primary btn-sm w-100" data-bs-toggle="modal" data-bs-target="#generateTeamsModal">
